--- a/app/package.json
+++ b/app/package.json
@@ -9,14 +9,18 @@
     "redux-devtools-log-monitor": "^1.2.0"
   },
   "dependencies": {
+    "normalizr": "^3.2.2",
     "onsenui": "^2.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-motion": "^0.4.7",
     "react-onsenui": "^1.1.0",
     "react-redux": "^5.0.3",
+    "react-router-dom": "^4.0.0-beta.7",
     "redux": "^3.6.0",
     "redux-act": "^1.1.0",
     "redux-saga": "^0.14.3",
+    "semantic-ui-react": "^0.67.0",
     "socket.io-client": "^1.7.3"
   },
   "scripts": {
