--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^4.0.0-beta.7",
     "redux": "^3.6.0",
     "redux-act": "^1.1.0",
+    "redux-form": "^6.5.0",
     "redux-saga": "^0.14.3",
     "semantic-ui-react": "^0.67.0",
     "socket.io-client": "^1.7.3"
