--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "react-motion": "^0.4.7",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.7",
+    "react-virtualized": "^9.3.0",
     "redux": "^3.6.0",
     "redux-act": "^1.1.0",
     "redux-form": "^6.5.0",
