--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "antd": "^2.8.0",
+    "axios": "^0.15.3",
     "normalizr": "^3.2.2",
+    "querystring": "^0.2.0",
     "rc-swipeout": "^1.2.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -25,6 +27,7 @@
     "redux-form": "^6.5.0",
     "redux-saga": "^0.14.3",
     "redux-thunk": "^2.2.0",
+    "request": "^2.81.0",
     "semantic-ui-react": "^0.67.0",
     "socket.io-client": "^1.7.3"
   },
