--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-dynamic-swiper": "^1.0.5",
+    "react-iscroll": "^1.1.2",
     "react-motion": "^0.4.7",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.7",
