--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "antd": "^2.8.0",
     "axios": "^0.15.3",
     "iosselect": "0.0.5",
+    "iscroll": "^5.2.0",
     "lodash": "^4.17.4",
     "normalizr": "^3.2.2",
     "querystring": "^0.2.0",
@@ -20,7 +21,6 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-dynamic-swiper": "^1.0.5",
-    "react-iscroll": "^1.1.2",
     "react-motion": "^0.4.7",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.7",
