--- a/admin/package.json
+++ b/admin/package.json
@@ -2,6 +2,7 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "admin-on-rest": "^0.9.4",
     "antd": "^2.9.0",
