--- a/admin/package.json
+++ b/admin/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.16.0",
     "moment": "^2.18.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "redux-form-schema": "0.0.3"
   },
   "devDependencies": {
     "babel-polyfill": "^6.23.0",
