--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "antd": "^2.8.0",
     "axios": "^0.15.3",
+    "co-lodash": "0.0.4",
+    "history": "^4.6.1",
     "iosselect": "0.0.5",
     "iscroll": "^5.2.0",
     "lodash": "^4.17.4",
     "normalizr": "^3.2.2",
+    "prop-types": "^15.5.9",
     "querystring": "^0.2.0",
     "rc-swipeout": "^1.2.4",
     "react": "^15.4.2",
@@ -24,6 +27,7 @@
     "react-motion": "^0.4.7",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.7",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-virtualized": "^9.3.0",
     "react-weui": "^1.0.4",
     "redux": "^3.6.0",
