--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "redux-saga": "^0.14.3",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
+    "rmc-list-view": "^0.8.1",
     "semantic-ui-react": "^0.67.0",
     "socket.io-client": "^1.7.3",
     "weui": "^1.1.0"
