--- a/app/package.json
+++ b/app/package.json
@@ -10,35 +10,34 @@
     "redux-devtools-log-monitor": "^1.2.0"
   },
   "dependencies": {
-    "antd": "^2.8.0",
+    "antd": "^2.10.2",
     "axios": "^0.15.3",
     "history": "^4.6.1",
     "iosselect": "0.0.5",
     "iscroll": "^5.2.0",
     "lodash": "^4.17.4",
-    "normalizr": "^3.2.2",
-    "prop-types": "^15.5.9",
+    "normalizr": "^3.2.3",
+    "prop-types": "^15.5.10",
     "querystring": "^0.2.0",
-    "rc-swipeout": "^1.2.4",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-dynamic-swiper": "^1.0.5",
-    "react-motion": "^0.4.7",
-    "react-redux": "^5.0.3",
-    "react-router-dom": "^4.0.0-beta.7",
+    "rc-swipeout": "^1.3.5",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-dynamic-swiper": "^1.0.7",
+    "react-motion": "^0.4.8",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
-    "react-virtualized": "^9.3.0",
     "react-weui": "^1.0.4",
     "redux": "^3.6.0",
-    "redux-act": "^1.1.0",
-    "redux-form": "^6.5.0",
-    "redux-saga": "^0.14.3",
+    "redux-act": "^1.2.0",
+    "redux-form": "^6.7.0",
+    "redux-saga": "^0.14.8",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
     "rmc-list-view": "^0.8.1",
-    "semantic-ui-react": "^0.67.0",
-    "socket.io-client": "^1.7.3",
-    "weui": "^1.1.0"
+    "semantic-ui-react": "^0.67.2",
+    "socket.io-client": "^1.7.4",
+    "weui": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
