--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "iscroll": "^5.2.0",
     "lodash": "^4.17.4",
     "normalizr": "^3.2.3",
+    "pica": "^3.0.4",
     "prop-types": "^15.5.10",
     "querystring": "^0.2.0",
     "rc-swipeout": "^1.3.5",
