--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "history": "^4.6.1",
     "iosselect": "0.0.5",
     "iscroll": "^5.2.0",
+    "layzr.js": "^2.2.2",
     "lodash": "^4.17.4",
     "normalizr": "^3.2.3",
     "pica": "^3.0.4",
