--- a/app/package.json
+++ b/app/package.json
@@ -10,18 +10,18 @@
     "redux-devtools-log-monitor": "^1.2.0"
   },
   "dependencies": {
-    "antd": "^2.10.2",
+    "antd": "^2.11.2",
     "axios": "^0.15.3",
-    "history": "^4.6.1",
+    "history": "^4.6.3",
     "iosselect": "0.0.5",
     "iscroll": "^5.2.0",
     "layzr.js": "^2.2.2",
     "lodash": "^4.17.4",
     "normalizr": "^3.2.3",
-    "pica": "^3.0.4",
+    "pica": "^3.0.5",
     "prop-types": "^15.5.10",
     "querystring": "^0.2.0",
-    "rc-swipeout": "^1.3.5",
+    "rc-swipeout": "^1.3.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-dynamic-swiper": "^1.0.7",
@@ -30,13 +30,16 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-weui": "^1.0.4",
-    "redux": "^3.6.0",
+    "redux": "^3.7.1",
     "redux-act": "^1.2.0",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
     "redux-form": "^6.7.0",
     "redux-saga": "^0.14.8",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
-    "rmc-list-view": "^0.8.1",
+    "rmc-list-view": "^0.8.3",
     "semantic-ui-react": "^0.67.2",
     "socket.io-client": "^1.7.4",
     "weui": "^1.1.2"
