--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "normalizr": "^3.2.3",
     "pica": "^3.0.5",
     "prop-types": "^15.5.10",
+    "qrcode.react": "^0.7.1",
     "querystring": "^0.2.0",
     "rc-swipeout": "^1.3.7",
     "react": "^15.5.4",
