--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^3.0.2",
     "redux-form-schema": "0.0.3"
   },
   "devDependencies": {
