--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,7 @@
     "aor-language-chinese": "^1.0.3",
     "aor-summernote-input": "^1.0.0",
     "axios": "^0.16.1",
+    "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
