--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     working_dir: /app
     volumes:
       - ./srv:/app
-      - ../srv/dist:/dist
+      - ./dist:/dist
     environment:
       - MONGO_URL=mongodb://192.168.0.1:27018/skj
       - listenport=3101
@@ -23,6 +23,6 @@ services:
     expose:
        - "27018"
     volumes:
-       - "/db/dbdata:/data/db -d"
+       - "/var/db100/dbdata:/data/db -d"
     ports:
        - "27018:27017"
