--- a/admin/package.json
+++ b/admin/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "admin-on-rest": "^1.1.0",
-    "antd": "^2.10.2",
+    "admin-on-rest": "1.1.0",
+    "antd": "2.10.2",
     "aor-language-chinese": "^1.0.3",
     "aor-summernote-input": "^1.0.0",
     "axios": "^0.16.1",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
     "react-router-dom": "^4.1.1",
-    "react-tap-event-plugin": "^3.0.2",
+    "react-tap-event-plugin": "2.0.1",
     "redux-form-schema": "0.0.3"
   },
   "devDependencies": {
