--- a/deploy/srv/package.json
+++ b/deploy/srv/package.json
@@ -20,7 +20,7 @@
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
-    "mongoose": "^4.8.5",
+    "mongoose": "4.8.5",
     "mongoose-paginate": "^5.0.3",
     "node-schedule": "^1.2.0",
     "node-uuid": "^1.4.7",
