--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - MONGO_URL=mongodb://192.168.0.1:27018/skj
       - listenport=3101
+      - tcpport=52342
     links:
       - mongodb
     ports:
