--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./srv:/app
       - ./dist:/dist
+      - ./log:/log
     environment:
       - MONGO_URL=mongodb://192.168.0.1:27018/skj
       - listenport=3100
