--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   skjserver:
     image: node:6.11.2
+    restart: always
     command: node ./index.js
     working_dir: /app
     volumes:
@@ -22,6 +23,7 @@ services:
        - "52341"
   mongodb:
     image:  mongo:3.4
+    restart: always
     expose:
        - "27018"
     volumes:
