--- a/admin/package.json
+++ b/admin/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "admin-on-rest": "1.1.0",
+    "admin-on-rest": "^1.3.2",
     "antd": "2.10.2",
     "aor-language-chinese": "^1.0.3",
     "aor-summernote-input": "^1.0.0",
     "axios": "^0.16.1",
     "jquery": "^3.2.1",
+     "jwt-decode": "^2.2.0",
     "moment": "^2.18.1",
     "react": "15.6.1",
     "react-dom": "15.6.1",
