--- a/deploy/srv/package.json
+++ b/deploy/srv/package.json
@@ -27,6 +27,7 @@
     "pubsub-js": "^1.5.5",
     "request": "^2.79.0",
     "socket.io": "^1.7.3",
+    "uuid": "^3.1.0",
     "winston": "^2.3.1",
     "xml2js": "^0.4.17"
   },
