--- a/deploy/cronexe/srv/package.json
+++ b/deploy/cronexe/srv/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.23.0",
     "node-schedule": "^1.3.1",
     "shelljs": "^0.8.3",
+    "string-format": "^2.0.0",
     "winston": "2.4.1"
   }
 }
